Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35966

galera.galera_as_master crashes in debug builds

    XMLWordPrintable

Details

    Description

      mariadbd: /home/buildbot/amd64-last-N-failed/build/storage/innobase/handler/ha_innodb.cc:4680: int innobase_commit(handlerton*, THD*, bool): Assertion `commit_trx' failed.
      250128 20:36:57 [ERROR] /home/buildbot/amd64-last-N-failed/build/sql/mariadbd got signal 6 ;
      Sorry, we probably made a mistake, and this is a bug.
       
      Your assistance in bug reporting will enable us to fix this for the next release.
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs about how to report
      a bug on https://jira.mariadb.org/.
       
      Please include the information from the server start above, to the end of the
      information below.
       
      Server version: 10.6.21-MariaDB-debug-log source revision: 57fe0b8ee3b50720f1d24e1202156edcccaef0e6
       
      The information page at https://mariadb.com/kb/en/how-to-produce-a-full-stack-trace-for-mariadbd/
      contains instructions to obtain a better version of the backtrace below.
      Following these instructions will help MariaDB developers provide a fix quicker.
       
      Attempting backtrace. Include this in the bug report.
      (note: Retrieving this information may fail)
       
      Thread pointer: 0x7fc0ac001138
      stack_bottom = 0x7fc0f9332000 thread_stack 0x49000
      mysys/stacktrace.c:215(my_print_stacktrace)[0x55f43402cc72]
      sql/signal_handler.cc:230(handle_fatal_signal)[0x55f4336631c4]
      /lib64/libc.so.6(+0x3e6f0)[0x7fc107a6e6f0]
      /lib64/libc.so.6(+0x8b94c)[0x7fc107abb94c]
      /lib64/libc.so.6(raise+0x16)[0x7fc107a6e646]
      /lib64/libc.so.6(abort+0xd3)[0x7fc107a587f3]
      /lib64/libc.so.6(+0x2871b)[0x7fc107a5871b]
      /lib64/libc.so.6(+0x37386)[0x7fc107a67386]
      handler/ha_innodb.cc:4681(innobase_commit(handlerton*, THD*, bool))[0x55f433ac6991]
      sql/handler.cc:2155(commit_one_phase_2(THD*, bool, THD_TRANS*, bool))[0x55f43366ac99]
      sql/handler.cc:1973(ha_commit_trans(THD*, bool))[0x55f43366a07e]
      sql/transaction.cc:501(trans_commit_stmt(THD*))[0x55f43349426f]
      sql/sql_parse.cc:6226(mysql_execute_command(THD*, bool))[0x55f4332ae67d]
      sql/sql_parse.cc:8209(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55f4332b448b]
      sql/sql_parse.cc:8031(wsrep_mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55f4332b3adc]
      sql/sql_parse.cc:1895(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x55f43329f879]
      sql/sql_parse.cc:1421(do_command(THD*, bool))[0x55f43329e231]
      sql/sql_connect.cc:1386(do_handle_one_connection(CONNECT*, bool))[0x55f433474ea2]
      sql/sql_connect.cc:1300(handle_one_connection)[0x55f433474bef]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x55f4339ce4e1]
      /lib64/libc.so.6(+0x89c02)[0x7fc107ab9c02]
      /lib64/libc.so.6(clone+0x44)[0x7fc107b3ded4]
       
      Connection ID (thread ID): 12
      Status: NOT_KILLED
      Query (0x7fc0ac014440): INSERT INTO t2 VALUES(1)
      

      Attachments

        Activity

          People

            serg Sergei Golubchik
            serg Sergei Golubchik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1h
                1h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.